--- a/template/iCMS/mobile/public.ui.htm
+++ b/template/iCMS/mobile/public.ui.htm
@@ -8,7 +8,7 @@
 
 <link href="<!--{$iCMS.UI}-->/bootstrap/3.2.0/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
-<link href="<!--{$iCMS.UI}-->/artDialog/5.0.4/skins/default.css" type="text/css" rel="stylesheet"/>
+<link href="<!--{$iCMS.UI}-->/artDialog/6.0.3/ui-dialog.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$iCMS.UI}-->/iCMS-6.0.0.css" type="text/css" rel="stylesheet"/>
 <link href="<!--{$site.urls.ui}-->/iCMS.mobile-6.0.0.css" type="text/css" rel="stylesheet"/>
 
@@ -20,8 +20,7 @@
 <script src="<!--{$iCMS.UI}-->/jquery-1.11.0.min.js"></script>
 <!--{if $ui.script}-->
 <script src="<!--{$iCMS.UI}-->/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="<!--{$iCMS.UI}-->/artDialog/5.0.4/artDialog.min.js"></script>
-<script src="<!--{$iCMS.UI}-->/artDialog/5.0.4/artDialog.plugins.min.js"></script>
+<script src="<!--{$iCMS.UI}-->/artDialog/6.0.3/dialog-plus-min.js"></script>
 <script src="<!--{$iCMS.UI}-->/iCMS-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS.user-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS.mobile-6.0.0.js"></script>
