--- a/template/iCMS/user/profile/setpassword.htm
+++ b/template/iCMS/user/profile/setpassword.htm
@@ -34,7 +34,7 @@
         </dt>
       </dl>
     </form>
-    <!-- 修改部分结束 --> 
+    <!-- 修改部分结束 -->
   </div>
   <script type="text/javascript">
 var warning = {label:'warning',icon:'warning'};
@@ -42,40 +42,40 @@ $(function(){
 	$("#resetpassword").submit(function(){
 		var oldPwd= $("[name='oldPwd']");
 		if(oldPwd.val()==""){
-			iCMS.dialog("<!--{iCMS:lang key='user:password:original'}-->",warning);
-			oldPwd.focus();
+      oldPwd.focus();
+			iCMS.alert("<!--{iCMS:lang key='user:password:original'}-->");
 			return false;
 		}
 		var password= $("#password").val();
 		if(password==""){
-			iCMS.dialog("<!--{iCMS:lang key='user:password:empty'}-->",warning);
-			$("#password").focus();
+      $("#password").focus();
+			iCMS.alert("<!--{iCMS:lang key='user:password:empty'}-->");
 			return false;
 		}
 		if(password.length<6){
-			iCMS.dialog("<!--{iCMS:lang key='user:password:error'}-->",warning);
-			$("#password").focus();
+      $("#password").focus();
+			iCMS.alert("<!--{iCMS:lang key='user:password:error'}-->");
 			return false;
 		}
 		var newPwd2= $("[name='newPwd2']");
 		if(newPwd2.val()==""){
-			iCMS.dialog("<!--{iCMS:lang key='user:password:new'}-->",warning);
-			newPwd2.focus();
+      newPwd2.focus();
+			iCMS.alert("<!--{iCMS:lang key='user:password:new'}-->");
 			return false;
 		}
 		if(password!=newPwd2.val()){
-			iCMS.dialog("<!--{iCMS:lang key='user:password:unequal'}-->",warning);
-			$("#password").focus();
+      $("#password").focus();
+			iCMS.alert("<!--{iCMS:lang key='user:password:unequal'}-->");
 			return false;
 		}
 		var validCode= $("[name='validCode']");
 		if(validCode.val()==""){
-			iCMS.dialog("<!--{iCMS:lang key='iCMS:seccode:empty'}-->",warning);
-			validCode.focus();
+      validCode.focus();
+			iCMS.alert("<!--{iCMS:lang key='iCMS:seccode:empty'}-->");
 			return false;
 		}
 		$("#resetpassword").submit();
 	})
 })
-</script> 
-  
+</script>
+
