--- a/template/iCMS/mobile/user/manage/article.htm
+++ b/template/iCMS/mobile/user/manage/article.htm
@@ -6,7 +6,7 @@
 .article hr{margin:5px;}
 /*.article .buttons{text-align: right;}*/
 .article .action{float: right;}
-.article .action a{color: #333;margin-left: 10px;}
+.article .action a{margin-left: 10px;}
 </style>
 <form class="form-inline" role="form" action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
 	<input name="action" type="hidden" value="manage" />
@@ -43,14 +43,14 @@
 						</a>
 						<div class="clearfix mt10">
 							<a href="<!--{$article.manage}-->&cid=<!--{$article_list.cid}-->"><span class="label label-primary"><!--{$article_list.category.name}--></span></a>
-							<span class="label label-default">点/评:<!--{$article_list.hits.count}-->/<!--{$article_list.comments}--></span>
+							<span class="label label-default">点/评/顶:<!--{$article_list.hits.count}-->/<!--{$article_list.comments}-->/<!--{$article_list.good}--></span>
 							<span class="action">
-								<a class="btn btn-default btn-xs" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> 编辑</a>
+								<a class="btn btn-primary btn-sm" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> 编辑</a>
 								<!--{if $article_list.status=="2"}-->
-								<a href="javascript:;" class="btn btn-default btn-xs" data-id="<!--{$article_list.id}-->" data-action="delete" title="彻底删除"><i class="fa fa-trash-o"></i> 删除</a>
-								<a href="javascript:;" class="btn btn-default btn-xs" data-id="<!--{$article_list.id}-->" data-action="renew" title="还原"><i class="fa fa-reply-all"></i> 还原</a>
+								<a href="javascript:;" class="btn btn-default btn-danger btn-sm" data-id="<!--{$article_list.id}-->" data-action="delete" title="彻底删除"><i class="fa fa-times"></i> 删除</a>
+								<a href="javascript:;" class="btn btn-default btn-sm" data-id="<!--{$article_list.id}-->" data-action="renew" title="还原"><i class="fa fa-reply-all"></i> 还原</a>
 								<!--{else}-->
-								<a href="javascript:;" class="btn btn-default btn-xs" data-id="<!--{$article_list.id}-->" data-action="trash" title="删除到回收站"><i class="fa fa-times"></i> 回收站</a>
+								<a href="javascript:;" class="btn btn-default btn-warning btn-sm" data-id="<!--{$article_list.id}-->" data-action="trash" title="删除到回收站"><i class="fa fa-trash-o"></i> 回收站</a>
 								<!--{/if}-->
 							</span>
 						</div>
@@ -60,7 +60,10 @@
 			</tbody>
 			<tfoot>
 	            <tr>
-	              <td colspan="5"><div class="iCMS_pagination"><!--{$iCMS.page.nav}--></div></td>
+	              <td colspan="5"><div class="iCMS_pagination"><!--{$iCMS.PAGES|method:'show(9)'}--></div></td>
+	            </tr>
+	            <tr>
+	              <td colspan="5"><div class="iCMS_pagination"><!--{$iCMS.PAGES|method:'current_page():bartext()'}--></div></td>
 	            </tr>
           </tfoot>
 		</table>
@@ -76,8 +79,8 @@ $(function(){
 		event.preventDefault();
 		var param = {
 			'id':$(this).attr("data-id"),
-			'da':$(this).attr("data-action"),
-			'action':'article_manage'
+			'act':$(this).attr("data-action"),
+			'pg':'article','action':'manage'
 		}
 		$.post("<!--{iCMS:router url='/user'}-->",param,function(c) {
 			if (c.code) {
